--- a/keywordDrivenFramework-I/conf/qaconf.properties
+++ b/keywordDrivenFramework-I/conf/qaconf.properties
@@ -1,13 +1,19 @@
-############################ DATABASE DETAILS ####################################################################
+############################ EMAIL CONFIGURATION  ###################################################################
+## Provide only the current test environment (allowed values = qa/prod/production), based on the supplied value internal
+## code execution will change
+currentTestEnvironment = qa
+
 ## Please provide the database details for mysql from where you want to fetch the Campaigns details.
-## QA ENVIRONMENT
-dbUserName = root
-dbPassword = QA@1234
-dbURL = jdbc:mysql://qa.vdopia.com:3306/qaautomation?
+dbUserName = <UserName>
+dbPassword = <Password>
+dbURL = jdbc:mysql://<DBServer>:3306/<DBName>?
 
 ## Please provide the mysql details of the database where the ads will be served. This will be used to verify the trackers and serve behaviour
 ## QA ENVIRONMENT
-serveDBUserName = root
-serveDBPassword = QA@1234
-serveDBURL = jdbc:mysql://serve.qa.vdopia.com:3306/qaautomation?
+serveDBUserName = <UserName>
+serveDBPassword = <Password>
+serveDBURL = jdbc:mysql://<DBServer>:3306/<DBName>?
 
+## Implicit Driver Delay In Seconds
+driverImplicitDelay = 45
+#####################################################################################################################
